4 Iterazione
aggiustamento tag + correzione salvataggio elementi e tag su DB